# samsyn

./: .env.example  .env.prod.example  .env.test.example  .gitignore  CLAUDE.md  LAYERS_API_SUMMARY.md  LayerCreator-issues.md  PHASE1_COMPLETE.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE6_IMPLEMENTATION_SUMMARY.md  PHASE6_PLAN.md  PHASE7_IMPLEMENTATION_SUMMARY.md  PHASE7_PLAN.md  README.md  database-schema.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  implementation-plan.md  index.html  package-lock.json  package.json  playwright.config.ts  run.sh  test-geojson-properties.json  test_draw.py  tests-to-implement.md  tsconfig.json  vite.config.js  vite.config.ts  wms-implementation.md
backend/: .dockerignore  .env  .env.example  CHANGES_OVERVIEW.md  CLERK_EMAIL_VALIDATION.md  COMMENTS_API_EXAMPLES.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  alembic.ini  pyproject.toml  requirements.txt  setup.sh  setup_test_db.sh  test_clerk_validation.py
backend/alembic/: env.py
backend/alembic/versions/: 20b62272cdaf_initial_schema_users_maps_layers_.py  987ad2269c79_add_edit_permission_to_maps.py  a1b2c3d4e5f6_add_wms_servers_table.py  b2c3d4e5f6g7_add_layer_visibility.py  c3d4e5f6g7h8_add_creation_source.py  cd1ef24f341f_add_indexes_to_comments_table.py  d4e5f6g7h8i9_add_source_config_gin_index.py  e2b9f20fdac0_rename_permission_to_view_permission.py
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py  health.py
backend/app/api/v1/: comments.py  (+12 more)
backend/app/models/: __init__.py  collaborator.py  comment.py  feature.py  layer.py  map.py  user.py  wms_server.py
backend/app/schemas/: __init__.py  comment.py  feature.py  layer.py  map.py  user.py  wms_server.py
backend/app/services/: auth_service.py  comment_service.py  feature_service.py  layer_service.py  map_service.py  url_whitelist_service.py  user_service.py  wms_server_service.py
backend/app/utils/: geojson.py
backend/samsyn_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api_endpoints.py  test_auth_service.py  test_comment_service.py  test_feature_service.py  test_layer_service.py  test_map_service.py  test_titiler_whitelist.py  test_url_whitelist_service.py  test_user_service.py  test_webhooks.py  test_webhooks_integration.py
(+194 files in other folders)
