[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "samsyn-backend"
version = "0.1.0"
description = "SamSyn Marine Spatial Planning Backend"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.1",
    "email-validator>=2.1.0",
    "fastapi>=0.109.0",
    "geoalchemy2>=0.14.3",
    "geojson>=3.1.0",
    "httpx>=0.26.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "shapely>=2.0.2",
    "sqlalchemy>=2.0.25",
    "svix>=1.0.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.1.0",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as async"
]
